# adk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: README.md
.github/workflows/: code-quality.yml
agent_team/: __init__.py  agent_team.ipynb  tools.py
live_agent/: .gitignore  agent.py  test_live_agent.py
multi_tool_agent/: .env.example  agent.py
tests/: __init__.py  test_agent_team.py  test_multi_tool_agent.py
